--- a/Progetto_Cabine/platformio.ini
+++ b/Progetto_Cabine/platformio.ini
@@ -8,10 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
-platform = atmelavr
-board = uno
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
 framework = arduino
-lib_deps = 
-	chris--a/Keypad@^3.1.1
-	arduino-libraries/Servo@^1.3.0
+monitor_speed = 115200
+lib_deps =
+    chris--a/Keypad @ ^3.1.1
+    madhephaestus/ESP32Servo @ ^3.0.5
